added footer copyright

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 </body>
 <footer class="footer footer-center p-4 bg-base-300 text-base-content">
   <aside>
-    <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+    <p>Copyright © 2023 - All right reserved by Alditiya Yudha Pratama</p>
   </aside>
 </footer>
 </html>
